--- a/it/LC_MESSAGES/vk-music-bot.po
+++ b/it/LC_MESSAGES/vk-music-bot.po
@@ -3,15 +3,15 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-06-01 16:38+0300\n"
-"PO-Revision-Date: 2019-06-01 20:10+0200\n"
-"Last-Translator: Xx_Crazyminer_xX\n"
+"PO-Revision-Date: 2019-06-02 13:00+0300\n"
+"Last-Translator: vkmowner <vkmowner@telegram>\n"
 "Language-Team: English\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.2.3\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #: handlers/audio.py:118
 msgid "Please wait, your audio is coming..."
@@ -252,86 +252,3 @@ msgid ""
 msgstr ""
 "Comando sconosciuto: %(command)s. Usa /help per vedere la lista dei comandi "
 "disponibili."
-
-#~ msgid ""
-#~ "What artist are you looking for? For example «Lera Lynn» or «Wiz Khalifa»"
-#~ msgstr ""
-#~ "Quale artista stai cercando? Per esempio «Lera Lynn» o «Wiz Khalifa»"
-
-#~ msgid ""
-#~ "What song are you looking for? For example «Get Lucky» or «Take Me To "
-#~ "Church»"
-#~ msgstr ""
-#~ "Quale canzone stai cercando? Per esempio «Get Lucky» o «Take Me To Church»"
-
-#~ msgid "intro_msg"
-#~ msgstr ""
-#~ "Scrivi il nome dell'artista e/o della canzone e troverò la musica che "
-#~ "cerchi!\n"
-#~ "/song — cerca per canzone\n"
-#~ "/artist — cerca per artista"
-
-#~ msgid "help_cmd_reply"
-#~ msgstr ""
-#~ "🔥 Comandi\n"
-#~ "Mandami semplicemente il nome di un artista e/o di una canzone e troverò "
-#~ "la musica che cerchi per te!\n"
-#~ "/song — cerca per canzone (utile per chat di gruppo)\n"
-#~ "/artist — cerca per artista\n"
-#~ "/my — accedi ai tuoi audio VK\n"
-#~ "/friends — accedi ai tuoi amici VK\n"
-#~ "/groups — accedi ai tuoi gruppi VK\n"
-#~ "/add — aggiungi l'ultima canzone scaricata ai tuoi audio VK\n"
-#~ "\n"
-#~ "☝️ Per accedere alle opzioni personalizzate di vk.com devi autorizzarmi "
-#~ "per accedere a VK tramite /start command\n"
-#~ "\n"
-#~ "📖 Testi\n"
-#~ "/lyrics /text /l — ottieni il testo dell'ultima canzone scaricata\n"
-#~ "/lyrics /text /l [1-%(max_songs)d] — ottieni il testo della canzone "
-#~ "scekta dalla lista di ricerca (le canzoni con il testo sono marcate con "
-#~ "📖)\n"
-#~ "\n"
-#~ "🌎 Lingue\n"
-#~ "/setlang — cambia lingua\n"
-#~ "\n"
-#~ "Canale ufficiale per le notizie: @vkmusic_bot_news\n"
-#~ "Informazioni di contatto: @vkmowner\n"
-
-#~ msgid "Oops, something went wrong. Please try again later."
-#~ msgstr "Oops, qualcosa è andato storto. Per piacere prova più tardi."
-
-#~ msgid "unknown_user_in_chat_msg"
-#~ msgstr ""
-#~ "Ciao! Sembra che non ci siamo ancora incontrati😳\n"
-#~ "Mandami un messaggio privato /start, e ti dirò cosa fare"
-
-#~ msgid ""
-#~ "To access all features you need to authorize me in your VK, follow [the "
-#~ "link](%s) to do it"
-#~ msgstr ""
-#~ "Per accedere a tutte le opzioni devi autorizzarmi per accedere al tuo VK, "
-#~ "segui il [link](%s) per farlo"
-
-#~ msgid "To access this feature you need to authorize me in VK"
-#~ msgstr ""
-#~ "Per accedere a questa opzione devi autorizzarmi per accedere a VK tramite"
-
-#~ msgid ""
-#~ "Oops! You need to give me access to your friends. Please, authorize me "
-#~ "again via [this link](%s)"
-#~ msgstr ""
-#~ "Ops! Devi permettermi l'accesso ai tuoi amici. Per favore, autorizzami di "
-#~ "nuovo tramite il [link](%s)"
-
-#~ msgid "Song is too big"
-#~ msgstr "La canzone è troppo grande 😔"
-
-#~ msgid "Choose a song number from 1 to %d"
-#~ msgstr "Scegli il numero della canzone da 1 a %d"
-
-#~ msgid "Download something before!"
-#~ msgstr "Scarica qualcosa prima!"
-
-#~ msgid "No lyrics found"
-#~ msgstr "Nessun testo trovato per questa canzone 😔"
