--- a/fa/LC_MESSAGES/vk-music-bot.po
+++ b/fa/LC_MESSAGES/vk-music-bot.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-06-01 16:38+0300\n"
-"PO-Revision-Date: 2019-06-01 21:06+0430\n"
-"Last-Translator: Amirhosseinhpv <support@intel-software.ir>\n"
+"PO-Revision-Date: 2019-06-02 13:01+0300\n"
+"Last-Translator: vkmowner <vkmowner@telegram>\n"
 "Language-Team: \n"
 "Language: fa\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.2.3\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #: handlers/audio.py:118
 msgid "Please wait, your audio is coming..."
@@ -233,120 +233,3 @@ msgstr "/setlang - تغییر زبان"
 #, python-format
 msgid "Unknown command: %(command)s. Call /help for a list of available commands."
 msgstr "دستور ناشناخته: %(command)s. برای مشاهده لیستی از دستورات موجود از /help استفاده کنید."
-
-#~ msgid ""
-#~ "Thanks! Now you can use personalized commands.\n"
-#~ "For example, use /my to access your VK audio"
-#~ msgstr ""
-#~ "با تشکر! شما میتوانید از دستورات شخصی سازی شده استفاده کنید.\n"
-#~ "مثلا برای دسترسی به صدا های خود در VK از دستور /my استفاده کنید"
-
-#~ msgid "What artist are you looking for? For example «Lera Lynn» or «Wiz Khalifa»"
-#~ msgstr "به دنبال چه خواننده ای هستید ؟ برای مثال «Pitbull» یا «Selena Gomez»"
-
-#~ msgid "What song are you looking for? For example «Get Lucky» or «Take Me To Church»"
-#~ msgstr "به دنبال چه آهنگی هستید ؟ برای مثال «Hands To Myself» یا «Bad Blood»"
-
-#~ msgid "intro_msg"
-#~ msgstr ""
-#~ "سلام ! نام خواننده و/یا اهنگ را به من بدهید تا ترانه را برای شما پیدا کنم!\n"
-#~ "‏/song —.جستجو با نام آهنگ\n"
-#~ "‏/artist — جستجو با نام خواننده\n"
-#~ "‏/setlang — انتخاب زبان\n"
-#~ "‏/settings — تغییر تنظیمات"
-
-#~ msgid "This command can not be used in a group chat, send it as a private message"
-#~ msgstr "این دستور را نمیتوان در گروه استفاده کرد ، در چت خصوصی امتحان کنید"
-
-#~ msgid "help_cmd_reply"
-#~ msgstr ""
-#~ "🔥 دستورات\n"
-#~ "فقط نام خواننده و/یا آهنگ را به من بدهید تا ترانه را برای شما پیدا کنم!\n"
-#~ "‏/song — جستجو نام اهنگ (مفید برای چت گروهی)\n"
-#~ "‏/artist — جستجو نام خواننده\n"
-#~ "‏/my — دسترسی به آهنگهایتان در VK\n"
-#~ "‏/friends —‪‬ دسترسی به دوستانتان در VK\n"
-#~ "‏/groups — دسترسی به گروهایتان در VK\n"
-#~ "‏/add — افزودن آخرین ترانه دانلودی به آهنگهایتان در VK\n"
-#~ "‏\n"
-#~ "☝ برای دستیابی به قابلیت های ربات باید با vk.com از طریق /start وارد شوید\n"
-#~ "‏\n"
-#~ "📖 متن ترانه\n"
-#~ "‏/lyrics /text /l — متن ترانه اخرین آهنگ دانلودی\n"
-#~ "‏\n"
-#~ "🌎 زبان\n"
-#~ "‏/setlang — تغییر زبان\n"
-#~ "‏\n"
-#~ "کانال رسمی اخبار ربات: @vkmusic_bot_news\n"
-#~ "تماس با سازنده: @vkmowner\n"
-
-#~ msgid "Donate"
-#~ msgstr "💸 حمایت"
-
-#~ msgid "Leave a positive feedback"
-#~ msgstr "🌟 نظر سازنده خود را ارسال کنید"
-
-#~ msgid "Remind later"
-#~ msgstr "بعدا یادآور شو"
-
-#~ msgid "Please rate us 5 stars in the bot-store: https://telegram.me/storebot?start=vkmusic_bot"
-#~ msgstr "به ما ⭐️⭐️⭐️⭐️⭐ در استوربوت بدهید : https://telegram.me/storebot?start=vkmusic_bot"
-
-#~ msgid "Ok, we won't bother you for a while"
-#~ msgstr "خب ، برای مدتی مزاحم شما نمی شویم"
-
-#~ msgid "If you like this bot there are a few ways you can support the developer!"
-#~ msgstr "اگر از این ربات خوشتان آمده است ، راه هایی برای حمایت از توسعه دهنده وجود دارد!"
-
-#~ msgid "To select new language, use the following commands"
-#~ msgstr "برای انتخاب زبان جدید ، از دستورات زیر استفاده کنید"
-
-#~ msgid "Lyrics icon: %s"
-#~ msgstr "ایکون متن ترانه: %s"
-
-#~ msgid "Cancel"
-#~ msgstr "لغو کردن"
-
-#~ msgid "Unlink VK (id %s)"
-#~ msgstr "خارج کردن از VK (id %s)"
-
-#~ msgid "Oops, something went wrong. Please try again later."
-#~ msgstr "متاسفانه خطایی زخ داده ! مجددا بعدا سعی نمایید"
-
-#~ msgid "unknown_user_in_chat_msg"
-#~ msgstr ""
-#~ "سلام ، ظاهرا قبلا همدیگر رو ندیده بودیم ! 😳\n"
-#~ "یک پیام خصوصی با /start, برای من بفرستید تا شما را راهنمایی کنم"
-
-#~ msgid "Wall"
-#~ msgstr "تصویر"
-
-#~ msgid "Audio"
-#~ msgstr "ترانه"
-
-#~ msgid "Albums"
-#~ msgstr "آلبوم"
-
-#~ msgid "I like this bot!"
-#~ msgstr "این ربات را دوست دارم !"
-
-#~ msgid "To access this feature you need to authorize me in VK"
-#~ msgstr "برای استفاده از تمامی امکانات به حساب VK خود از طریق"
-
-#~ msgid "Error"
-#~ msgstr "خطا"
-
-#~ msgid "Song is too big"
-#~ msgstr "این ترانه خیلی حجیم هست 😔"
-
-#~ msgid "Download"
-#~ msgstr "دانلود"
-
-#~ msgid "Choose a song number from 1 to %d"
-#~ msgstr "یک شماره اهنگ از 1 تا %d انتخاب کنید"
-
-#~ msgid "Download something before!"
-#~ msgstr "شما باید اول دانلودی انجام دهید!"
-
-#~ msgid "No lyrics found"
-#~ msgstr "هیچ متنی برای این اهنگ یافت نشد 😔"
