--- a/tr/LC_MESSAGES/vk-music-bot.po
+++ b/tr/LC_MESSAGES/vk-music-bot.po
@@ -3,15 +3,15 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-06-01 16:38+0300\n"
-"PO-Revision-Date: 2019-06-01 18:51+0300\n"
-"Last-Translator: M.Furkan <By_Azade@telegram>\n"
+"PO-Revision-Date: 2019-06-02 13:10+0300\n"
+"Last-Translator: vkmowner <vkmowner@telegram>\n"
 "Language-Team: English\n"
-"Language: Turkish\n"
+"Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.2.3\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #: handlers/audio.py:118
 msgid "Please wait, your audio is coming..."
@@ -23,7 +23,7 @@ msgstr "⛔️ Şarkı, telif hakkı sahipleri tarafından kaldırıldı"
 
 #: handlers/docdb.py:64
 msgid "Got it! Note: it may take time for the song to appear in the search"
-msgstr "Anladım! Not: şarkının aramada görünmesi zaman alabilir."
+msgstr "Anladım! Not: şarkının aramada görünmesi zaman alabilir"
 
 #: handlers/donation.py:43 handlers/donation.py:113 handlers/settings.py:52
 #: handlers/settings.py:72
@@ -60,7 +60,7 @@ msgstr "Reklamları satır içi altyazıları devre dışı bırakma seçeneği"
 
 #: handlers/donation.py:56 handlers/donation.py:136
 msgid "An option to display audio format info"
-msgstr " Ses formatı bilgisini görüntüleme seçeneği"
+msgstr "Ses formatı bilgisini görüntüleme seçeneği"
 
 #: handlers/donation.py:57 handlers/donation.py:137
 msgid "An option to change search results size"
@@ -225,7 +225,7 @@ msgstr "Neyi değiştirmek istersiniz?"
 
 #: handlers/settings.py:74
 msgid "Please, select new language"
-msgstr "Lütfen yeni bir dil seçin."
+msgstr "Lütfen yeni bir dil seçin"
 
 #: handlers/settings.py:83
 msgid "Please help us with a donation (/donate) to access this feature"
@@ -245,127 +245,3 @@ msgid "Unknown command: %(command)s. Call /help for a list of available commands
 msgstr ""
 "Bilinmeyen komut: %(command)s. Mevcut komutların bir listesini /help yazarak "
 "bulabilirsiniz."
-
-#~ msgid ""
-#~ "Thanks! Now you can use personalized commands.\n"
-#~ "For example, use /my to access your VK audio"
-#~ msgstr ""
-#~ "Teşekkürler! Artık kişiselleştirilmiş komutları kullanabilirsiniz.\n"
-#~ "Örneğin,VK daki seslerinize erişmek için /my komutunu kullanın."
-
-#~ msgid "What artist are you looking for? For example «Lera Lynn» or «Wiz Khalifa»"
-#~ msgstr "Hangi sanatçıyı arıyorsun? Örneğin «Lera Lynn» veya «Wiz Khalifa»"
-
-#~ msgid ""
-#~ "What song are you looking for? For example «Get Lucky» or «Take Me To Church»"
-#~ msgstr "Hangi şarkıyı arıyorsun? Örneğin «Yakamoz» ya da «Üryan Geldim»"
-
-#~ msgid "intro_msg"
-#~ msgstr ""
-#~ "Merhaba! Sadece bana bir sanatçı ve / veya bir şarkı adı gönderin, sizin için "
-#~ "müzik bulacağım!\n"
-#~ "/song — şarkı adından ara\n"
-#~ "/artist — şarkıcı adından ara\n"
-#~ "/setlang — dili değiştir\n"
-#~ "/settings —ayarları değiştir"
-
-#~ msgid "This command can not be used in a group chat, send it as a private message"
-#~ msgstr ""
-#~ "Bu komut bir Grup sohbetinde kullanılamaz, özel mesaj olarak gönderilebilir"
-
-#~ msgid "Donate"
-#~ msgstr "💸 Bağış Yap"
-
-#~ msgid "Leave a positive feedback"
-#~ msgstr "🌟 Olumlu bir geribildirim bırakın"
-
-#~ msgid "Remind later"
-#~ msgstr "⏰ Daha sonra hatırlat"
-
-#~ msgid ""
-#~ "Please rate us 5 stars in the bot-store: https://telegram.me/storebot?"
-#~ "start=vkmusic_bot"
-#~ msgstr ""
-#~ "Lütfen bizi bot mağazasında uylayın ⭐️⭐️⭐️⭐️⭐️bot mağazası: https://telegram.me/"
-#~ "storebot?start=vkmusic_bot"
-
-#~ msgid "Ok, we won't bother you for a while"
-#~ msgstr "Tamam, bir süre seni rahatsız etmeyeceğim"
-
-#~ msgid "If you like this bot there are a few ways you can support the developer!"
-#~ msgstr "Bu botu beğendiyseniz geliştiriciyi desteklemenin birkaç yolu var!"
-
-#~ msgid "To select new language, use the following commands"
-#~ msgstr "Yeni bir dil seçmek için belirtilen komutu kullanın"
-
-#~ msgid "Lyrics icon: %s"
-#~ msgstr "Şarkı sözü ikonu: %s"
-
-#~ msgid "Cancel"
-#~ msgstr "İptal"
-
-#~ msgid "Unlink VK (id %s)"
-#~ msgstr "VK bağlantısını kaldır (id %s)"
-
-#~ msgid "Oops, something went wrong. Please try again later."
-#~ msgstr "Hmmm, bir şeyler ters gitti. Lütfen daha sonra tekrar deneyiniz."
-
-#~ msgid "unknown_user_in_chat_msg"
-#~ msgstr ""
-#~ "Merhaba! Görünen o ki seninle daha önce tanışmadık.😳\n"
-#~ "Bana bir özel mesajda  /start komutunu gönder sana ne yapacağın hakkındaki "
-#~ "bilgi mesajını ileteyim."
-
-#~ msgid ""
-#~ "To access all features you need to authorize me in your VK, follow [the link]"
-#~ "(%s) to do it"
-#~ msgstr ""
-#~ "VK özelliklerinin tümüne erişmek istiyorsan [bu linki](%s) kullanarak "
-#~ "yapabilirsin."
-
-#~ msgid "Wall"
-#~ msgstr "Akış"
-
-#~ msgid "Audio"
-#~ msgstr "Ses"
-
-#~ msgid "Albums"
-#~ msgstr "Albümler"
-
-#~ msgid "I like this bot!"
-#~ msgstr "Bu botu beğendim"
-
-#~ msgid "To access this feature you need to authorize me in VK"
-#~ msgstr "Bu özelliğe erişmek için beni VK'de yetkilendirmelisin."
-
-#~ msgid ""
-#~ "Oops! You need to give me access to your friends. Please, authorize me again "
-#~ "via [this link](%s)"
-#~ msgstr ""
-#~ "Hata! Bana arkadaşlarına erişim izni vermelisin.  [Bu linki](%s) kullanarak "
-#~ "tekrar yetkilendirebilirsin."
-
-#~ msgid "Error"
-#~ msgstr "Hata"
-
-#~ msgid "Song is too big"
-#~ msgstr "Şarkı çok büyük 😔"
-
-#~ msgid "Download"
-#~ msgstr "İndir"
-
-#~ msgid "Choose a song number from 1 to %d"
-#~ msgstr "1 ile %d arasında bir şarkı numarası seçin"
-
-#~ msgid "Download something before!"
-#~ msgstr "Önce bir şeyler indir!"
-
-#~ msgid "No lyrics found"
-#~ msgstr "Bu şarkı için şarkı sözleri bulunamadı 😔"
-
-#~ msgid ""
-#~ "Oops! Looks like your VK authorization is lost. Please, authorize me again via "
-#~ "the link %s"
-#~ msgstr ""
-#~ "Oops! Looks like your VK authorization is lost. Please, authorize me again via "
-#~ "the link %s"
