--- a/hi/LC_MESSAGES/vk-music-bot.po
+++ b/hi/LC_MESSAGES/vk-music-bot.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-06-01 16:38+0300\n"
-"PO-Revision-Date: 2019-06-02 13:12+0300\n"
-"Last-Translator: vkmowner <vkmowner@telegram>\n"
+"PO-Revision-Date: 2019-06-02 17:10+0530\n"
+"Last-Translator: Voldemort1912 <hewhomustn0tbenamed@telegram>\n"
 "Language-Team: Hindi\n"
 "Language: hi_IN\n"
 "MIME-Version: 1.0\n"
