--- a/vk-music-bot.pot
+++ b/vk-music-bot.pot
@@ -85,7 +85,7 @@ msgstr ""
 #: handlers/donation.py:120
 msgid ""
 "You're a good person who kindly supports us, so we granted you a "
-"*lifetime* premium status, enjoy it"
+"*lifetime* premium status, enjoy it."
 msgstr ""
 
 #: handlers/donation.py:124
