--- a/id/LC_MESSAGES/vk-music-bot.po
+++ b/id/LC_MESSAGES/vk-music-bot.po
@@ -8,160 +8,171 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-06-01 16:38+0300\n"
-"PO-Revision-Date: 2019-06-01 16:50+0300\n"
+"PO-Revision-Date: 2019-06-02 20:27+0700\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: id_ID\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.1\n"
+"X-Generator: Poedit 2.2.3\n"
 "X-Poedit-Basepath: ..\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Poedit-SearchPath-0: .\n"
 
 #: handlers/audio.py:118
 msgid "Please wait, your audio is coming..."
-msgstr ""
+msgstr "Harap tunggu, audio Anda akan datang ..."
 
 #: handlers/audio.py:134
 msgid "Song is removed by copyright owners"
-msgstr ""
+msgstr "Lagu dihapus oleh pemilik hak cipta"
 
 #: handlers/docdb.py:64
 msgid "Got it! Note: it may take time for the song to appear in the search"
-msgstr "Oke! Catatan: butuh beberapa waktu agar lagu muncul dalam pencarian"
+msgstr ""
+"Mengerti! Catatan: mungkin perlu waktu hingga lagu muncul dalam pencarian"
 
 #: handlers/donation.py:43 handlers/donation.py:113 handlers/settings.py:52
 #: handlers/settings.py:72
 msgid "Close"
-msgstr ""
+msgstr "Tutup"
 
 #: handlers/donation.py:46
 msgid "Support us"
-msgstr ""
+msgstr "Dukung kami"
 
 #: handlers/donation.py:48
 msgid ""
 "Your donations help us to develop new features, increase stability and pay "
 "for our servers."
 msgstr ""
+"Donasi Anda membantu kami mengembangkan fitur baru, meningkatkan stabilitas, "
+"dan membayar server kami."
 
 #: handlers/donation.py:51 handlers/donation.py:131
 msgid ""
 "For just one donation we will gift your account with a *lifetime* premium "
 "status. There is a short list of premium features you will receive:"
 msgstr ""
+"Untuk hanya satu donasi, kami akan menghadiahkan akun Anda dengan status "
+"Premium *seumur hidup*. Ada daftar singkat fitur premium yang akan Anda "
+"terima:"
 
 #: handlers/donation.py:54 handlers/donation.py:134
 msgid "No more ads and spam to you, *forever*"
-msgstr ""
+msgstr "Tidak ada lagi iklan dan spam untuk Anda, *selamanya*"
 
 #: handlers/donation.py:55 handlers/donation.py:135
 msgid "An option to disable advertising inline captions"
-msgstr ""
+msgstr "Opsi untuk menonaktifkan iklan inline teks"
 
 #: handlers/donation.py:56 handlers/donation.py:136
 msgid "An option to display audio format info"
-msgstr ""
+msgstr "Opsi untuk menampilkan info format audio"
 
 #: handlers/donation.py:57 handlers/donation.py:137
 msgid "An option to change search results size"
-msgstr ""
+msgstr "Opsi untuk mengubah ukuran hasil pencarian"
 
 #: handlers/donation.py:58 handlers/donation.py:138
 msgid "More options under /settings command"
-msgstr ""
+msgstr "Opsi lainnya di bawah perintah /settings"
 
 #: handlers/donation.py:60
 #, python-format
 msgid ""
 "Subscribe to our news channel to be notified of new features: %(channel)s"
 msgstr ""
+"Berlangganan saluran berita kami untuk diberi tahu fitur baru: %(channel)s"
 
 #: handlers/donation.py:118
 msgid "You are a premium user!"
-msgstr ""
+msgstr "Anda adalah pengguna premium!"
 
 #: handlers/donation.py:120
 msgid ""
 "You're a good person who kindly supports us, so we granted you a *lifetime* "
 "premium status, enjoy it"
 msgstr ""
+"Anda adalah orang baik yang dengan ramah mendukung kami, jadi kami "
+"memberikan Anda status premium *seumur hidup*, nikmatilah"
 
 #: handlers/donation.py:124
 msgid "There is a short list of premium features you have:"
-msgstr ""
+msgstr "Ada daftar singkat fitur premium yang Anda miliki:"
 
 #: handlers/donation.py:126
 msgid "You are not premium, yet"
-msgstr ""
+msgstr "Anda belum premium"
 
 #: handlers/donation.py:128
 msgid ""
 "Use /donate command to support us and get your *lifetime* premium status"
 msgstr ""
+"Gunakan perintah /donate untuk mendukung kami dan dapatkan status premium "
+"*seumur hidup* Anda"
 
 #: handlers/favorites.py:34
 msgid "Added to your playlist (/my)"
-msgstr "Tambahkan ke daftar putar"
+msgstr "Ditambahkan ke daftar putar Anda (/my)"
 
 #: handlers/favorites.py:47
 msgid "Removed from your playlist"
-msgstr "Hapus dari daftar putar"
+msgstr "Dihapus dari daftar putar Anda"
 
 #: handlers/help.py:16
 msgid "🔥 Commands"
-msgstr ""
+msgstr "🔥 Perintah"
 
 #: handlers/help.py:17 handlers/start.py:37
 msgid ""
 "Just send me an artist and/or a song name and I will find music for you!"
 msgstr ""
+"Kirimkan saya nama artis dan/atau nama lagu dan saya akan mencarikan musik "
+"untuk Anda!"
 
 #: handlers/help.py:18 handlers/start.py:38
 msgid "/song — search by song title"
-msgstr ""
+msgstr "/song — cari berdasarkan judul lagu"
 
 #: handlers/help.py:19 handlers/start.py:39
 msgid "/artist — search for artist name"
-msgstr ""
+msgstr "/artist — cari berdasarkan nama artis"
 
 #: handlers/help.py:20
-#, fuzzy
-#| msgid "Removed from your playlist"
 msgid "/my — list your playlist"
-msgstr "Hapus dari daftar putar"
+msgstr "/my — daftar putar Anda"
 
 #: handlers/help.py:21
 msgid "/top — popular songs"
-msgstr ""
+msgstr "/top — lagu populer"
 
 #: handlers/help.py:22 handlers/start.py:41
 msgid "/settings — change settings"
-msgstr ""
+msgstr "/settings — ubah pengaturan"
 
 #: handlers/help.py:23
 msgid "/donate — support authors"
-msgstr ""
+msgstr "/donate — dukung pembuat"
 
 #: handlers/help.py:24
 msgid "/premium — premium info"
-msgstr ""
+msgstr "/premium — info premium"
 
 #: handlers/help.py:26
 #, python-format
 msgid "Official news channel: %(channel)s"
-msgstr ""
+msgstr "Saluran berita resmi: %(channel)s"
 
 #: handlers/help.py:27
 #, python-format
 msgid "Contact information: %(contact)s"
-msgstr ""
+msgstr "Informasi kontak: %(contact)s"
 
 #: handlers/search.py:117 handlers/search.py:172
 msgid "I found nothing"
-msgstr "Kami tidak menemukan apapun"
+msgstr "Saya tidak menemukan apa pun"
 
 #: handlers/search.py:135
 #, python-format
@@ -170,19 +181,19 @@ msgstr "Hasil %(first)d-%(last)d dari %(total)d\n"
 
 #: handlers/search.py:213
 msgid "What song are you looking for?"
-msgstr "Lagu apa yang ingin Kamu cari?"
+msgstr "Lagu apa yang kamu cari?"
 
 #: handlers/search.py:224
 msgid "What artist are you looking for?"
-msgstr "Siapa Penyanyi yang ingin Kamu cari?"
+msgstr "Artis apa yang kamu cari?"
 
 #: handlers/search.py:280 handlers/search.py:303
 msgid "You need to search for something before"
-msgstr "Kamu harus mencari sesuatu sebelumnya"
+msgstr "Anda perlu mencari sesuatu sebelumnya"
 
 #: handlers/search.py:308
 msgid "You're at the first page already"
-msgstr "Kamu sudah berada dihalaman awal"
+msgstr "Anda sudah berada di halaman pertama"
 
 #: handlers/settings.py:31
 msgid "Enabled"
@@ -209,43 +220,45 @@ msgstr "Tombol suka (hati): %s"
 #: handlers/settings.py:43
 #, python-format
 msgid "Inline mode captions: %s"
-msgstr ""
+msgstr "Keterangan mode inline: %s"
 
 #: handlers/settings.py:46
 #, python-format
 msgid "Show audio format: %s"
-msgstr ""
+msgstr "Tampilkan format audio: %s"
 
 #: handlers/settings.py:49
 #, python-format
 msgid "Search results: %d"
-msgstr ""
+msgstr "Hasil pencarian: %d"
 
 #: handlers/settings.py:54
 msgid "What would you like to change?"
-msgstr "Apa yang ingin Kamu ubah?"
+msgstr "Apa yang ingin Anda ubah?"
 
 #: handlers/settings.py:74
 msgid "Please, select new language"
-msgstr "Silahkan pilih Bahasa baru"
+msgstr "Silakan pilih bahasa baru"
 
 #: handlers/settings.py:83
 msgid "Please help us with a donation (/donate) to access this feature"
-msgstr ""
+msgstr "Tolong bantu kami dengan donasi (/donate) untuk mengakses fitur ini"
 
 #: handlers/settings.py:141
 msgid "Language settings updated"
-msgstr "Pengaturan Bahasa diperbarui"
+msgstr "Pengaturan bahasa diperbarui"
 
 #: handlers/start.py:40
 msgid "/setlang — change language"
-msgstr ""
+msgstr "/setlang — ganti bahasa"
 
 #: handlers/unknowncommand.py:27
 #, python-format
 msgid ""
 "Unknown command: %(command)s. Call /help for a list of available commands."
 msgstr ""
+"Perintah tidak dikenal: %(command)s. Panggil /help untuk daftar perintah "
+"yang tersedia."
 
 #~ msgid "Empty file size, skipping"
 #~ msgstr "Ukuran berkas kosong, melewati"
