--- a/id/LC_MESSAGES/vk-music-bot.po
+++ b/id/LC_MESSAGES/vk-music-bot.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-06-01 16:38+0300\n"
-"PO-Revision-Date: 2019-06-02 20:27+0700\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2019-06-02 17:04+0300\n"
+"Last-Translator: vkmowner <vkmowner@telegram>\n"
 "Language-Team: \n"
 "Language: id_ID\n"
 "MIME-Version: 1.0\n"
@@ -96,7 +96,7 @@ msgid ""
 "premium status, enjoy it."
 msgstr ""
 "Anda adalah orang baik yang dengan ramah mendukung kami, jadi kami "
-"memberikan Anda status premium *seumur hidup*, nikmatilah"
+"memberikan Anda status premium *seumur hidup*, nikmatilah."
 
 #: handlers/donation.py:124
 msgid "There is a short list of premium features you have:"
@@ -259,138 +259,3 @@ msgid ""
 msgstr ""
 "Perintah tidak dikenal: %(command)s. Panggil /help untuk daftar perintah "
 "yang tersedia."
-
-#~ msgid "Empty file size, skipping"
-#~ msgstr "Ukuran berkas kosong, melewati"
-
-#~ msgid "We don't support '%(mime_type)s' audio yet"
-#~ msgstr "Kami belum mendukung audio '%(mime_type)s'"
-
-#~ msgid "We require artist and title tags to be set"
-#~ msgstr "Kami membutuhkan artis dan tag judul untuk penyetelan"
-
-#~ msgid "Audio must be at least %(seconds)d seconds long"
-#~ msgstr "Audio setidaknya harus berdurasi %(seconds)d"
-
-#~ msgid "Song bitrate must be in range from %(lowest)d to %(highest)d"
-#~ msgstr "Bitrate lagu harus berkisar antara %(lowest)d hingga %(highest)d"
-
-#~ msgid "We already have this song, but thank you anyway!"
-#~ msgstr "Kami sudah memiliki lagu ini, tapi terima kasih :) !!"
-
-#~ msgid "Oops, something went wrong. Please try again later."
-#~ msgstr "Ups! Sepertinya ada yang tidak beres :( Silakan coba lagi nanti."
-
-#~ msgid "Choose a song number from 1 to %d"
-#~ msgstr "Pilih nomor lagu dari 1 hingga %d"
-
-#~ msgid "Download something first!"
-#~ msgstr "Unduhlah sesuatu terlebih dahulu !!"
-
-#~ msgid ""
-#~ "This command can not be used in a group chat, send it as a private message"
-#~ msgstr ""
-#~ "Perintah ini tidak dapat digunakan dalam obrolan grup, kirimlah sebagai "
-#~ "pesan pribadi"
-
-#~ msgid ""
-#~ "Hi! Just send me an artist and/or a song name and I will find music for "
-#~ "you!\n"
-#~ "/song — search by song title\n"
-#~ "/artist — search for artist name\n"
-#~ "/setlang — change language\n"
-#~ "/settings — change settings\n"
-#~ msgstr ""
-#~ "Hai ! Cukup kirimkan nama penyanyi atau nama lagu, Kami akan menemukan "
-#~ "lagu untukmu :)\n"
-#~ "/song — cari berdasarkan judul lagu\n"
-#~ "/artist — cari berdasarkan nama penyanyi\n"
-#~ "/setlang — ubah bahasa\n"
-#~ "/settings — ubah pengaturan\n"
-
-#~ msgid ""
-#~ "🔥 Commands\n"
-#~ "Just send me an artist and/or a song name and I will find music for you!\n"
-#~ "/song — search by song title (useful for group chats)\n"
-#~ "/artist — search for artist name\n"
-#~ "/my — list your playlist\n"
-#~ "/settings — change settings\n"
-#~ "\n"
-#~ "Official news channel: %(channel)s\n"
-#~ "Contact information: %(contact)s\n"
-#~ "\n"
-#~ "BTC: `%(btc)s`\n"
-#~ msgstr ""
-#~ "🔥 Perintah\n"
-#~ "Cukup kirimkan nama penyanyi atau nama lagu, Kami akan menemukan lagu "
-#~ "untukmu :)\n"
-#~ "/song — cari berdasarkan judul lagu (berguna untuk obrolan group)\n"
-#~ "/artist — cari berdasarkan nama penyanyi\n"
-#~ "/my — daftar putarmu\n"
-#~ "/settings — ubah pengaturan\n"
-#~ "\n"
-#~ "Kanal berita resmi: %(channel)s\n"
-#~ "Informasi kontak: %(contact)s\n"
-#~ "\n"
-#~ "BTC: `%(btc)s`\n"
-
-#~ msgid "Donate"
-#~ msgstr "Donasi"
-
-#~ msgid "Remind later"
-#~ msgstr "Ingatkan nanti"
-
-#~ msgid "Ok, we won't bother you for a while"
-#~ msgstr "Ok, kami tidak akan mengganggu Kamu untuk sementara waktu"
-
-#~ msgid "Leave a positive feedback"
-#~ msgstr "Tinggalkan saran yang bermanfaat"
-
-#~ msgid ""
-#~ "Please rate us 5 stars in the bot-store: https://telegram.me/storebot?"
-#~ "start=vkmusic_bot"
-#~ msgstr ""
-#~ "Silahkan beri rating 5 bintang di bot-store: https://telegram.me/storebot?"
-#~ "start=vkmusic_bot"
-
-#~ msgid ""
-#~ "If you like this bot there are a few ways you can support the developer!"
-#~ msgstr ""
-#~ "Jika Kamu menyukai bot ini, ada beberapa cara untuk memberi dukungan pada "
-#~ "pengembang !!"
-
-#~ msgid "You didn't specify the artist"
-#~ msgstr "Kamu tidak menjelaskan penyanyi secara rinci"
-
-#~ msgid "Please reply to an audio message"
-#~ msgstr "Silahkan balas dengan pesan suara"
-
-#~ msgid ""
-#~ "You suggested edit for artist: \"%(new_artist)s\"\n"
-#~ "We will review your suggestion and store it in our database. Thank you!"
-#~ msgstr ""
-#~ "Kamu menyarankan perubahan untuk penyanyi: \"%(new_artist)s\"\n"
-#~ "Kami akan meninjau saranmu dan menyimpannya di database kami. "
-#~ "Terimakasih :)"
-
-#~ msgid "To select new language, use the following commands"
-#~ msgstr "Untuk memilih Bahasa baru, gunakan perintah berikut"
-
-#~ msgid "I like this bot!"
-#~ msgstr "Saya suka bot ini !!"
-
-#~ msgid ""
-#~ "Your playlist is empty. Upload MP3 audios or use /add to add songs from "
-#~ "search to it"
-#~ msgstr ""
-#~ "Kamu tidak memiliki Daftar Putar. Unggah lagu MP3 atau gunakan /add untuk "
-#~ "menambah lagu dari fitur pencarian"
-
-#~ msgid "Caption under audios: %s"
-#~ msgstr "Keterangan dibawah lagu: %s"
-
-#~ msgid "Results with buttons: %s"
-#~ msgstr "Hasil dengan tombol: %s"
-
-#~ msgid "Cancel"
-#~ msgstr "Batal"
